--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -11,7 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is python?"
+    "## Why python?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are numerous programming languages from which to choose.  Many of them specialized for specific types of tasks. Python, like others, is a general purpose and high-level programming language and can be used for a variety of applications. There are a few reasons however why you might choose to work in python:\n",
+    "\n",
+    "### Code readability and maintenance\n",
+    "Python syntax and formatting emphasizes code readability. In many cases, python code often reads as english sentences instead of quirky syntax. This makes it a useful language to learn as a first language, but also helps others quickly interpret what is actually happening in your code. This helps with mainintaining old code as well and makes updating and sharing materials easier.\n",
+    "\n",
+    "### Compatibility\n",
+    "Python supports many operating systems natively.  Meaning your python code can be readily ported across systems with little to no effort. \n",
+    "\n",
+    "### Robust built-in libraries\n",
+    "Python has a HUGE developer community supporting it.  This means that many functions, methods, and utilities ALREADY exist and you can stand on the shoulders of those who have already spent a decent amount of time figuring out how to do something in python.\n",
+    "\n",
+    "### Large number of statistics and bioinformatics modules\n",
+    "Aside from the built-in modules, there is also a large community of bioinformatics, general biology, and statistics developers who have contributed packages for python. This includes a number of large frameworks including BioPython that help ease entry and streamline more complex workflows."
    ]
   },
   {
@@ -30,10 +49,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "python"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a very convenient tool for testing python commands, and for getting started with the language, but it is not very useful for creating actual programs and or scripts to run. To make an actual program, you will need to put your code in a text file and save it with a `.py` extension."
+    "This is a very convenient tool for testing python commands, and for getting started with the language, but it is not very useful for creating actual programs and or scripts to run. To make an actual program, you will need to put your code in a text file and save it with a `.py` extension. (more on that later today!)"
    ]
   },
   {
@@ -50,7 +79,7 @@
    "metadata": {},
    "source": [
     "### IPython Notebooks\n",
-    "Another way in which we can use python is how we are doing so here."
+    "Another way in which we can use python is how we are doing so here, in interaction iPython Notebooks. (Brief re-intro to navigating notebooks as needed)."
    ]
   },
   {
@@ -63,9 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "You are now leaving help and returning to the Python interpreter.\n",
+      "If you want to ask for help on a particular object directly from the\n",
+      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
+      "has the same effect as typing a particular string at the help> prompt.\n"
+     ]
+    }
+   ],
    "source": [
     "help()"
    ]
@@ -100,7 +141,9 @@
    "metadata": {},
    "source": [
     "### Data Types\n",
-    "In python, like most programming languages 'data type' is an important concept. When you store data in variables, you need to be aware of _how_ that data is being stored. This is referred to as a data type.  Different data types can do different things and can interact with different 'operators' (e.g. '+, -, *, &, etc' in distinct ways.  For example the `+` operator will sum the values of two variables that contain numbers:"
+    "Let's review a few of the data types that were detailed in the prereq materials. \n",
+    "\n",
+    "When you store data in variables, you need to be aware of _how_ that data is being stored. This is referred to as a data type.  Different data types can do different things and can interact with different 'operators' (e.g. '+, -, *, &, etc' in distinct ways.  For example the `+` operator will sum the values of two variables that contain numbers:"
    ]
   },
   {
@@ -136,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following data types are 'built-in' by default in python:\n",
+    "#### 'Built-in' data types by default in python:\n",
     "    \n",
     "* Text Type:\t`str`\n",
     "* Numeric Types:\t`int`, `float`\n",
@@ -175,15 +218,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = \"myString\" # str\n",
+    "x = \"This is a string\" # str\n",
     "x = 10         # int\n",
     "x = 10.0       # float\n",
     "x = ['pizza','apple','hotdog']  # list\n",
     "x = ('pizza','apple','hotdog')  # tuple\n",
     "x = {'pizza','apple','hotdog'}  # set\n",
     "x = range(10)  # range\n",
-    "x = {\"name\": \"Loyal\", \"age\": 41, \"department\" : \"neuroscience\"}  # dict\n",
-    "x = True       # bool\n"
+    "x = {\"name\": \"Loyal\", \"age\": 42, \"department\" : \"neuroscience\"}  # dict\n",
+    "x = True       # bool"
    ]
   },
   {
@@ -195,19 +238,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
+    "x = 5\n",
+    "print(type(x))\n",
     "x = str(5)\n",
-    "x"
+    "print(type(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = float(4)\n",
     "x"
@@ -237,7 +302,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The integer type should be used for numbers that will always be whole for their operations.  Think of counting the number of bases in a DNA sequence, or counting the number of times something happens.  You will almost never have a 'partial' quantity for these values.  But be careful of how `int` types are handled when you do certain types of operations:"
+    "The integer type should be used for numbers that will always be whole for their operations.  Think of counting the number of bases in a DNA sequence, or counting the number of times something happens.  You will almost never have a 'partial' quantity for these values.  But be careful of how `int` types are handled when you do certain types of operations\n",
+    "\n",
+    "#### Exercise\n",
+    "Create three different integer variables and calculate the mean (designated here as `mu`).  What data type is `mu` after this calculation? why?"
    ]
   },
   {
@@ -248,9 +316,10 @@
    "source": [
     "a = 5\n",
     "b = 10\n",
-    "c = 10/5\n",
-    "print(c)\n",
-    "type(c)"
+    "c = 13\n",
+    "\n",
+    "#Calculate the mean of a,b,c\n",
+    "mu = ??\n"
    ]
   },
   {
@@ -275,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 'float' type can also be scientific notation by adding an `e` to indicate the power of 10:"
+    "The `float` type can also be scientific notation by adding an `e` to indicate the power of 10:"
    ]
   },
   {
@@ -295,7 +364,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can convert from one type to another with the `int()` and `float()` functions."
+    "You can cast from one type to another with the `int()` and `float()` functions.\n",
+    "\n",
+    "### Exercise\n",
+    "What happens to a float when it's cast to an integer?  to a string?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1.1415926\n",
+    "b = 453.8452\n",
+    "\n",
+    "??"
    ]
   },
   {
@@ -361,9 +445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "nomi\n",
+      "is fu\n",
+      "Genomics\n",
+      "is fun\n",
+      "Gnmc sfn\n",
+      "nuf si scimoneG\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a string literal and store in a variable\n",
     "a = \"Genomics is fun\"\n",
@@ -380,7 +478,13 @@
     "# You can leave either side of the ':' black to represent the beginning or end of a string respectively\n",
     "print(a[:8])\n",
     "\n",
-    "print(a[9:])"
+    "print(a[9:])\n",
+    "\n",
+    "# You can also use a 'step' indicator to skip over elements in the string (notice the second colon)\n",
+    "print(a[0::2])\n",
+    "\n",
+    "# And you can also step backwards through the end of the string using a negative step indicator (e.g. reverse)\n",
+    "print(a[::-1])"
    ]
   },
   {
@@ -394,14 +498,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strings have several functions that are available for some common queries and manipulations:"
+    "Strings have several 'built-in' functions (methods) that are available for some common queries and manipulations:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "genomics is fun\n",
+      "My favorite gene is Pantr2.\n",
+      "Genomics is hard\n",
+      "['Genomics', 'is', 'fun']\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the length of the string\n",
     "print(len(a))\n",
@@ -409,7 +525,7 @@
     "# Convert the string to lower case\n",
     "print(a.lower())\n",
     "\n",
-    "# upper?\n",
+    "# upper??\n",
     "\n",
     "# You can strip off excess white space\n",
     "b = \"My favorite gene is Pantr2.   \"\n",
@@ -431,9 +547,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"She sells seashells by the seashore.\"\n",
     "x = \"sea\" in a\n",
@@ -519,14 +646,24 @@
    "metadata": {},
    "source": [
     "## Boolean type\n",
-    "The Boolean type refers predominantly to logical tests, and ultimately, `type: bool` can only have two values: `True` or `False` (case sensitive). There are often times when you need to test a value or an expression. In python the value returned from these test is a `bool`:"
+    "The Boolean type refers to logical tests, and ultimately, `type: bool` can only have two values: `True` or `False` (case sensitive). There are often times when you need to test a value or an expression. In python the value returned from these test is a `bool`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(14 > 3)\n",
     "print(14 == 3)\n",
@@ -537,7 +674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use `bool` values and variables to help control the flow of your code. For example, we could print a message based on whether or not a condition is `True`."
+    "We _very_ often use `bool` values and variables to help control the *flow of your code*. For example, we could print a message based on whether or not a condition is `True`."
    ]
   },
   {
@@ -554,6 +691,21 @@
     "else:\n",
     "    print(\"b is the smaller value\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "Create variables containing your first name, middle initial, last name, _age_, and one favorite thing. Construct and print an ouput string that creates a short sentence describing you that contains your full name, _calculated birth year_, and something you like!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -578,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,9 +746,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mef2c\n",
+      "Cxcl1\n",
+      "['Mef2c', 'Pax6']\n"
+     ]
+    }
+   ],
    "source": [
     "print(genes[1])\n",
     "\n",
@@ -609,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since `list` items are mutable, you can change any specific item by refering to it's index number"
+    "How could you determine the length of the `genes` list?"
    ]
   },
   {
@@ -617,6 +779,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Return the length of list `genes`\n",
+    "??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since `list` items are mutable, you can change any specific item by refering to it's index number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gapdh', 'Mef2c', 'Sox10', 'Cxcl1', 'Msi1']\n"
+     ]
+    }
+   ],
    "source": [
     "genes[2] = 'Sox10'\n",
     "print(genes)"
@@ -631,9 +818,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAPDH\n",
+      "MEF2C\n",
+      "SOX10\n",
+      "CXCL1\n",
+      "MSI1\n"
+     ]
+    }
+   ],
    "source": [
     "for x in genes:\n",
     "    print(x.upper())"
@@ -648,9 +847,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gapdh', 'Mef2c', 'Sox10', 'Cxcl1', 'Msi1', 'Foxp1']\n"
+     ]
+    }
+   ],
    "source": [
     "genes.append('Foxp1')\n",
     "\n",
@@ -689,9 +896,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pear', 'carrot', 'celery', 'potato']\n"
+     ]
+    }
+   ],
    "source": [
     "fruit = ['apple', 'banana','pear']\n",
     "veg = ['carrot','celery','potato']\n",
@@ -717,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,12 +967,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sox2\n",
+      "chr4\n",
+      "1589182\n"
+     ]
+    }
+   ],
    "source": [
     "for val in a:\n",
     "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n"
    ]
   },
   {
@@ -772,7 +1004,7 @@
    "metadata": {},
    "source": [
     "## Dictionaries\n",
-    "Dictionaries are 'indexed' collections, meaning the _values_ within the collection each must have a unique _key_. You can create a dictionary using curly braces `{}`."
+    "Dictionaries are 'indexed' collections, meaning the _values_ within the collection each must have a unique identifying _key_. You can create a dictionary using curly braces `{}`."
    ]
   },
   {
@@ -887,6 +1119,13 @@
     "lookup = \"Ensembl\"\n",
     "if lookup in myGene:\n",
     "    print(f\"Found {lookup} in myGene dictionary keys.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries are useful for storing information about an item or object. We can also start to build out collections of collections to help us keep more organized"
    ]
   },
   {
@@ -1143,22 +1382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gapdh\n",
-      "Mef2c\n",
-      "Pax6\n",
-      "Cxcl1\n",
-      "Msi1\n",
-      "No more genes!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genes = ['Gapdh','Mef2c','Pax6','Cxcl1','Msi1']\n",
     "\n",
@@ -1179,7 +1405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...Maybe stopping here for 1.3 module..."
+    "...Maybe stopping here for the morning..."
    ]
   }
  ],
@@ -1199,7 +1425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
