--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -24,20 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length of dna: 51\n",
-      "Number of Gs: 13\n",
-      "Number of Cs: 12\n",
-      "49.01960784313725\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dna = 'ATTAGCGTATTCGAGCTATCGATCTAGCGAGCTAGCTATCAGCGACGTACG'\n",
     "\n",
@@ -60,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While that's not terribly tedious, what if we needed to do this for 10,000 different dna sequences? We will definitely need a way to 'functionalize' this process.  So lets create a function to do all of this for us. We start by defining the function with the `def` statement to give the function a name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
+    "While that's not terribly tedious, what if we needed to do this for 10,000 different dna sequences? We will definitely need a way to more quickly perform these actions. What we need to do is 'functionalize' this process so we can effectively turn it into a reuseable command. So lets create a function to do all of this for us. We start by defining the function with the `def` statement to give the function a name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
    ]
   },
   {
@@ -71,9 +60,9 @@
    "source": [
     "def getGC(seq):\n",
     "    dnaLength = len(seq)\n",
-    "    nG = seq.count('G')\n",
-    "    nC = seq.count('C')\n",
-    "    nGC = nG + nC\n",
+    "    nG = ??\n",
+    "    nC = ??\n",
+    "    nGC = ??\n",
     "    GC_content = (nGC/dnaLength)*100\n",
     "    return(GC_content)"
    ]
@@ -316,6 +305,39 @@
     "import sys\n",
     "sys.path"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "1. Create a function to calculate the volume of a sphere using the radius as an arugment. (hint: use a module to find $\\pi$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
