--- a/day2/notebooks/Day2-Morning-Intro-Python-exercises.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro-Python-exercises.ipynb
@@ -11,7 +11,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set. Do the calculations manually, and then use the built-in functions provided in the **statistics** module."
+    "Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set. Do the mean calculation manually, and then use the built-in functions provided in the **statistics** module for the others.\n",
+    "\n",
+    "**Hint**: The functions *sum*, *len*, *statistics.stdev*, and *statistics.variance* will be useful. Use the *help()* command to learn more about them, if needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function len in module builtins:\n",
+      "\n",
+      "len(obj, /)\n",
+      "    Return the number of items in a container.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "help(len)\n",
+    " \n",
+    "my_samples = [8.343003931051403, 10.983139316643154, 10.028263738536845, 10.030605626392367, 10.479262011457655, 11.003444821427529,\n",
+    "  11.15941163985765, 8.572931560317459, 10.734225011659504, 9.42236611877579, 9.428287552964232, 12.751301969731728, 9.175698518027408,\n",
+    "   13.277810638831117, 10.36739357419826, 9.586251108314395, 10.427168797319448, 9.598709847965262, 8.687074988292876, 9.964044897601617,\n",
+    "    10.452622225611169, 10.180824722303885, 9.671712590995602, 11.232140649632495, 12.024224902990818]\n",
+    " \n",
+    " ## your code here\n",
+    " ## help(statistics)\n",
+    " ## sample_mean = statistics.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From *my_samples* above, print out the following:\n",
+    "- The first five elements (remember that python begins with index 0)\n",
+    "- The last five elements\n",
+    "- The 13th and 14th elements"
    ]
   },
   {
@@ -20,16 +64,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import statistics\n",
-    "help(statistics)\n",
-    " \n",
-    "my_samples = [8.343003931051403, 10.983139316643154, 10.028263738536845, 10.030605626392367, 10.479262011457655, 11.003444821427529,\n",
-    "  11.15941163985765, 8.572931560317459, 10.734225011659504, 9.42236611877579, 9.428287552964232, 12.751301969731728, 9.175698518027408,\n",
-    "   13.277810638831117, 10.36739357419826, 9.586251108314395, 10.427168797319448, 9.598709847965262, 8.687074988292876, 9.964044897601617,\n",
-    "    10.452622225611169, 10.180824722303885, 9.671712590995602, 11.232140649632495, 12.024224902990818]\n",
-    " \n",
-    " ## your code here\n",
-    " ## sample_mean = statistics.mean()"
+    "\n",
+    "## your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assign integer values to the variables x and y. Write an if/else/elif control statement that prints out which variable is greater (or if they are equal), along with both their values. For example: \n",
+    "\n",
+    "'The value of x is 45. The value of y is 3. x is greater than y\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## your code here\n"
    ]
   },
   {
@@ -60,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change every other letter of your favorite model organism to be capitalized, and then update your dictionary. Remember that each letter in a string can be indexed in for loops."
+    "Create a new string holding your model organsism, and add the string \"is my favorite organism\" to the end. Then update your dictionary."
    ]
   },
   {
@@ -70,7 +124,32 @@
    "outputs": [],
    "source": [
     "## your code here\n",
-    "## TODO: This might be harder than i thought it would be"
+    "## TODO: add toupper hint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following lists are the majors offered by two different universities. Print the following:\n",
+    "- Majors offered by both schools (intersection)\n",
+    "- Majors offered by either schools (union)\n",
+    "- Majors offered only by school A (difference)\n",
+    "- Majors offered only by school B (difference)\n",
+    "\n",
+    "**Hint**: lists are iterable, so can be used in for loops! Also remember the 'in' operator.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [\"Biochemistry\",\"Molecular Biology\",\"Genetics\", \"Biostatistics\",\"Histopathology\"]\n",
+    "B = [\"Mathematics\",\"Physics\",\"Biostatistics\",\"Biochemistry\",\"Ethics\"]\n",
+    "\n",
+    "## your code here"
    ]
   },
   {
@@ -79,7 +158,9 @@
    "source": [
     "The first hundred amino acids of Green Fluorescent Protein (https://www.ncbi.nlm.nih.gov/protein/QAA95706.1) are MSKGEELFTGVVPILVELDGDVNGHKFSVSGEGEGDATYGKLTLKFICTTGKLPVPWPTLVTTFTYGVQCFSRYPDHMKQHDFFKSAMPEGYVQERTIFF. \n",
     "- How many Leucines (L) are there?\n",
-    "- How many times does any amino acid appear twice in a row?"
+    "- How many times does any amino acid appear twice in a row? You don't need to keep track of which amino acids, just return the total number.\n",
+    "\n",
+    "Hint: define a variable *repeat_count* with a value of zero, and update it when a repeat occurs. Strings are also iterable!"
    ]
   },
   {
@@ -90,7 +171,8 @@
    "source": [
     "gfp_100 = 'MSKGEELFTGVVPILVELDGDVNGHKFSVSGEGEGDATYGKLTLKFICTTGKLPVPWPTLVTTFTYGVQCFSRYPDHMKQHDFFKSAMPEGYVQERTIFF'\n",
     "\n",
-    "### your code here"
+    "## repeat_count = 0\n",
+    "## your code here"
    ]
   }
  ],
@@ -113,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
