Changes to Day2 mostly

--- a/day1/notebooks/Day1.0-Morning-Review_of_prereq_assignments.ipynb
+++ b/day1/notebooks/Day1.0-Morning-Review_of_prereq_assignments.ipynb
@@ -6,6 +6,32 @@
    "source": [
     "# Welcome and Review of Prereqs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installation Troubleshooting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open questions from Prereqs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Course expectations and integration with BCMB courses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
