--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -11,8 +11,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List comprehension\n"
+    "## List comprehension\n",
+    "Review:  A list is defined by items within square brackets `[]`\n",
+    "\n",
+    "In python you can use 'list comprehension' to create new lists algorithmically by iterating over another list. \n",
+    "\n",
+    "This is a conceptual extension of a for loop.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example for loop\n",
+    "solutions = []\n",
+    "    for x in range(10):\n",
+    "    solutions.append(4x+3)\n",
+    "    \n",
+    "# List comprehension version\n",
+    "soltions = [4x+3 for x in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Range function (over integers only) as an iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examples of range(x,y,z)\n",
+    "[x for x in range(20)]\n",
+    "\n",
+    "# use range to find every third number between 1 and 30\n",
+    "??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List comprehension examples using variables other than numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Human Genetics', 'BCMB', 'DGM']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Folks = [(\"Jared\",\"Human Genetics\",\"2024\"),\n",
+    "(\"Nora\", \"BCMB\",\"2025\"),\n",
+    "(\"Loyal\", \"DGM\",\"Indefinite\")]\n",
+    "\n",
+    "[x[1] for x in Folks]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -316,20 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.141592653589793"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -518,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
